[gd_scene load_steps=5 format=3 uid="uid://iftsfle430nr"]

[ext_resource type="Script" path="res://assets/scenes/ui/customization/customizationUI.gd" id="1_2bhr7"]
[ext_resource type="PackedScene" uid="uid://ctrswootky6q7" path="res://assets/scenes/ui/customization/customizationWorld.tscn" id="1_sgpgn"]

[sub_resource type="Gradient" id="Gradient_clvtb"]
colors = PackedColorArray(0.407843, 0, 0, 1, 0.309804, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_b2dxp"]
gradient = SubResource("Gradient_clvtb")

[node name="customizationUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2bhr7")

[node name="subViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="subViewport" type="SubViewport" parent="subViewportContainer"]
handle_input_locally = false
msaa_3d = 1
size = Vector2i(1600, 900)
render_target_update_mode = 4

[node name="customizationWorld" parent="subViewportContainer/subViewport" instance=ExtResource("1_sgpgn")]

[node name="animationPlayer" type="AnimationPlayer" parent="."]

[node name="menuRight" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 0.999
offset_left = -535.0
offset_bottom = -0.100037
grow_horizontal = 0

[node name="textureRect" type="TextureRect" parent="."]
modulate = Color(0.764706, 0.596078, 0, 1)
layout_mode = 0
offset_left = -7.0
offset_top = -4.0
offset_right = 395.0
offset_bottom = 96.0
texture = SubResource("GradientTexture1D_b2dxp")

[node name="label" type="Label" parent="textureRect"]
layout_mode = 0
offset_left = 20.0
offset_top = 7.0
offset_right = 301.0
offset_bottom = 59.0
theme_override_font_sizes/font_size = 51
text = "CUSTOMIZATION"
